<resources>
    <string name="app_name">ShareMyFood</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN-UP</string>
    <string name="full_name_john_smith">Full Name: John Smith</string>
    <string name="email_xxx_yyy_zzz">Email: xxx@yyy.zzz</string>
    <string name="phone_vic_0452507911">Phone(VIC): 0452507911</string>
    <string name="address_142_756_burwood_highway">Address: 142/756 Burwood Highway</string>
    <string name="passwordEx">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="my_list">My List</string>
    <string name="title_activity_my_list">MyList</string>
    <string name="pick_up_times">Pick up times:</string>
    <string name="save">SAVE</string>
    <string name="title">Title:</string>
    <string name="take_an_image">TAKE AN IMAGE</string>
    <string name="add_picture">Add picture</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="date">Date:</string>
    <string name="description">Description:</string>
    <string name="quantity">Quantity:</string>
    <string name="location">Location:</string>
    <string name="share">Share</string>
    <string name="to_be_implemented">TO BE IMPLEMENTED</string>
</resources>