<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181C37"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:foregroundGravity="center"
        android:gravity="center"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/add_picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/shootImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="left"
            android:onClick="openCamera"
            android:text="@string/take_an_image"
            android:textColor="#000000"
            app:backgroundTint="#F3E8D4" />

        <Button
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="right"
            android:onClick="openMediaGallery"
            android:text="@string/upload_image"
            android:textColor="#000000"
            app:backgroundTint="#F3E8D4" />
    </LinearLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/title"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="20"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <EditText
        android:id="@+id/pickUpTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/pick_up_times"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/quantity"
        android:digits="0123456789"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="20"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/location"
        android:inputType="textPostalAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints="" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="#000000"
        app:backgroundTint="#F3E8D4" />

</androidx.appcompat.widget.LinearLayoutCompat>